add jsmin, cssmin

--- a/app/views/base.jade
+++ b/app/views/base.jade
@@ -8,7 +8,7 @@ html
     meta(name="viewport", content="width=device-width, initial-scale=1")
     link(rel="stylesheet", href="dist/styles/foundation/scss/normalize.css")
     link(rel="stylesheet", href="dist/styles/foundation/scss/foundation.css")
-    link(rel="stylesheet", href="dist/styles/main.css")
+    link(rel="stylesheet", href="dist/styles/app.css")
   body
     include nav
     block content
