change nav markup

--- a/app/views/nav.jade
+++ b/app/views/nav.jade
@@ -1,7 +1,12 @@
-nav
-  | Nav
-  ul
-    li
-      a(href="#") fisrt
-    li
-      a(href="#") second
+nav.top-bar(data-topbar="", role="navigation")
+  ul.title-area
+    li.name
+      h1
+        a New Project
+  
+  section.top-bar-section
+    ul.left  
+      li
+        a(href="#") fisrt
+      li
+        a(href="#") second
